# git-profile-switcher

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/git_profile_switcher/: cli.py  gui.py
tests/: test_basic.py
